remove use of java8 home