@@ -110,14 +110,7 @@ object PekkoBuild {
     }
   }
 
-  private def jvmGCLogOptions(isJdk11OrHigher: Boolean, isJdk8: Boolean): Seq[String] = {
-    if (isJdk11OrHigher)
-      // -Xlog:gc* is equivalent to -XX:+PrintGCDetails. See:
-      // https://docs.oracle.com/en/java/javase/11/tools/java.html#GUID-BE93ABDC-999C-4CB5-A88B-1994AAAC74D5
-      Seq("-Xlog:gc*")
-    else if (isJdk8) Seq("-XX:+PrintGCTimeStamps", "-XX:+PrintGCDetails")
-    else Nil
-  }
+  private val jvmGCLogOptions: Seq[String] = Seq("-Xlog:gc*")
 
   // -XDignore.symbol.file suppresses sun.misc.Unsafe warnings
   final val DefaultJavacOptions = Seq("-encoding", "UTF-8", "-Xlint:unchecked", "-XDignore.symbol.file")
@@ -132,7 +125,6 @@ object PekkoBuild {
     Compile / scalacOptions ++=
       JdkOptions.targetJdkScalacOptions(
         targetSystemJdk.value,
-        optionalDir(jdk8home.value),
         fullJavaHomes.value,
         scalaVersion.value),
     Compile / scalacOptions ++= (if (allWarnings) Seq("-deprecation") else Nil),
@@ -140,10 +132,10 @@ object PekkoBuild {
       opt == "-Xlog-reflective-calls" || opt.contains("genjavadoc")),
     Compile / javacOptions ++= {
       DefaultJavacOptions ++
-      JdkOptions.targetJdkJavacOptions(targetSystemJdk.value, optionalDir(jdk8home.value), fullJavaHomes.value)
+      JdkOptions.targetJdkJavacOptions(targetSystemJdk.value, fullJavaHomes.value)
     },
     Test / javacOptions ++= DefaultJavacOptions ++
-    JdkOptions.targetJdkJavacOptions(targetSystemJdk.value, optionalDir(jdk8home.value), fullJavaHomes.value),
+    JdkOptions.targetJdkJavacOptions(targetSystemJdk.value, fullJavaHomes.value),
     Compile / javacOptions ++= (if (allWarnings) Seq("-Xlint:deprecation") else Nil),
     doc / javacOptions := Seq(),
     crossVersion := CrossVersion.binary,
@@ -219,7 +211,7 @@ object PekkoBuild {
         "-Djava.security.egd=file:/dev/./urandom")
 
       defaults ++ CliOptions.runningOnCi
-        .ifTrue(jvmGCLogOptions(JdkOptions.isJdk11orHigher, JdkOptions.isJdk8))
+        .ifTrue(jvmGCLogOptions)
         .getOrElse(Nil) ++
       JdkOptions.versionSpecificJavaOptions
     },
@@ -319,10 +311,7 @@ object PekkoBuild {
   lazy val docLintingSettings = Seq(
     compile / javacOptions ++= Seq("-Xdoclint:none"),
     test / javacOptions ++= Seq("-Xdoclint:none"),
-    doc / javacOptions ++= {
-      if (JdkOptions.isJdk8) Seq("-Xdoclint:none")
-      else Seq("-Xdoclint:none", "--ignore-source-errors")
-    })
+    doc / javacOptions ++= Seq("-Xdoclint:none", "--ignore-source-errors"))
 
   def loadSystemProperties(fileName: String): Unit = {
     import scala.collection.JavaConverters._
